# symbiflow-arch-defs

./: .gitmodules  .travis.yml  pylintrc
.github/travis/: script.sh  test.sh
common/cmake/: devices.cmake
ice40/: icestorm.cmake
ice40/devices/: CMakeLists.txt
ice40/devices/layouts/icebox/: CMakeLists.txt
ice40/make/: boards.mk  tests.mk
ice40/tests/blink/: example.v  icevision.pcf
ice40/tests/picosoc/: Makefile  hx8kdemo.pcf  hx8kdemo.v
ice40/utils/: ice40_import_layout_from_icebox.py  ice40_import_routing.py  ice40_list_layout_in_icebox.py
ice40/utils/tests/: test_ice40_import_layout_from_icebox.py
make/: tests.mk
utils/: all_deps.py  deps_verilog.py  deps_xml.py  listdirs.py  listfiles.py  n.py
utils/lib/: connection_database.py  deps.py
utils/lib/rr_graph/: graph2.py  points.py  tracks.py
utils/lib/rr_graph/tests/: test_graph2.py  test_points.py
utils/lib/rr_graph_xml/: graph2.py
utils/vlog/: vlog_to_model.py  vlog_to_pbtype.py
vpr/muxes/logic/mux2/: run_tests.py
vpr/muxes/logic/mux2/tb/: tb_mux2.sv
xc7/utils/: prjxray_assign_tile_pin_direction.py  prjxray_form_channels.py  prjxray_routing_import.py
